--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,27 @@
   height: 40vmin;
   pointer-events: none;
 }
+
+.start-up-background {
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.start-up {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 body {
   height: 100vh;
   background-color: #008080;
+}
+.react-draggable {
+  height: 0;
+  width: 0;
 }
 
 @media (prefers-reduced-motion: no-preference) {
