--- a/src/components/desktop-icons/desktopicons.css
+++ b/src/components/desktop-icons/desktopicons.css
@@ -1,11 +1,15 @@
 .desktop-icons {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 90px;
     gap: 2rem;
     padding: 1rem;
 }
 .desktop-icons .icon {
     display: flex;
+    height: 90px;
+    width: 90px;
     flex-direction: column;
     align-items: center;
     width: max-content;
@@ -13,8 +17,7 @@
     cursor: pointer;
 }
 
-.icon p {
-    font-size: smaller;
+.desktop-icons  .icon p {
     font-weight: bold;
     color: #fefefe;;
     text-align: center;
