--- a/src/components/desktop-icons/desktopicons.css
+++ b/src/components/desktop-icons/desktopicons.css
@@ -1,10 +1,24 @@
 .desktop-icons {
-    display: flex;
+    grid-area: 1 / 1 / 21 / 7; /* Spans from row 1 to row 20, and columns 1 to 6 */
+    display: grid;
+    grid-template-columns: 90px;
+    grid-template-rows: 1fr 1fr;
+    padding: 1rem;
+    justify-items: center;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
     width: 90px;
     gap: 2rem;
-    padding: 1rem;
+    padding: 1rem; */
+}
+.icon-resume {
+    grid-column: 1;
+    grid-row: 1; 
+}
+.icon-portfolio {
+    grid-column: 1;
+    grid-row: 2; 
 }
 .desktop-icons .icon {
     display: flex;
@@ -22,4 +36,13 @@
     color: #fefefe;;
     text-align: center;
     cursor: pointer;
+}
+
+img {
+    user-drag: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
