--- a/src/components/portfolio/portfoliowindow.scss
+++ b/src/components/portfolio/portfoliowindow.scss
@@ -1,9 +1,11 @@
+.drag-portfolio {
+  grid-column: 9;
+  grid-row: 7;
+}
+
 .portfolio-window{
-    position: 'absolute';
-    top: 0;
     width: max-content;
     height: max-content;
-    transform: translate(100px, -100px);
     .window-title {
       display: flex;
       align-items: center;
@@ -56,12 +58,11 @@
       line-height: 31px;
       padding-left: 0.25rem;
     }
-}
-
-.react-draggable.react-draggable-dragged {
-  z-index: 1;
-  height: 0;
-  width: 0;
+    .custom-tree-view {
+      button {
+        box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+      }
+    }
 }
 
  
