--- a/src/components/browser/browserwindow.scss
+++ b/src/components/browser/browserwindow.scss
@@ -55,6 +55,12 @@
     line-height: 31px;
     padding-left: 0.25rem;
     }
+    // .browser-view > div {
+    //     background-color: white;
+    // }
 }
+
+
+
 
 
