--- a/src/components/portfolio/portfoliowindow.scss
+++ b/src/components/portfolio/portfoliowindow.scss
@@ -63,6 +63,9 @@
         box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
       }
     }
+    .project-article > :first-child {
+      background-color: white;
+    }
 }
 
  
