--- a/src/components/resume/resumepdf.css
+++ b/src/components/resume/resumepdf.css
@@ -1,18 +1,35 @@
 
-  
- 
-  
- 
-  .pdf_container {
-    display: flex;
-    flex-direction: column;
-  }
-  
+/* .pdf_container {
+  margin: 0;
+  width: 55% !important;
+  height: 100% !important;
+  padding:0 !important;
+} */
+.react-pdf__Document {
+  margin: 0;
+  width: 100% !important;
+  height: 100% !important;
+  padding:0 !important;
+}
 
-  
-  .pdf_container {
-    max-width: 100%;
-    height: auto !important;
-  }
-  
+canvas.react-pdf__Page__canvas {
+  margin: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+  padding:0 !important;
+ 
+}
+.react-pdf__Page__textContent.textLayer {
+  margin: 0;
+  width: 100% !important;
+  height: 100% !important;
+  padding:0 !important;
+}
+.react-pdf__Page__annotations.annotationLayer {
+  margin: 0;
+  width: 100% !important;
+  height: 100% !important;
+  padding:0 !important;
+}
+
   
