resizing on mobile

--- a/src/components/browser/browserwindow.scss
+++ b/src/components/browser/browserwindow.scss
@@ -1,3 +1,9 @@
+@media (max-width: 500px) {
+    .browser-window {
+      width: 420px !important; 
+  }
+}
+
 .drag-browser {
     grid-column: 11;
     grid-row: 5;
