login window on mobile

--- a/src/components/browser/browserwindow.scss
+++ b/src/components/browser/browserwindow.scss
@@ -1,9 +1,9 @@
 @media (max-width: 500px) {
-    .browser-window{
+    .drag-browser{
     .window-content {
-        width: 380px !important;
+        width: 85vw !important;
     }
-    }
+  }
 }
 
 .drag-browser {
