shorter project texts for mobile

--- a/src/components/portfolio/portfoliowindow.scss
+++ b/src/components/portfolio/portfoliowindow.scss
@@ -1,3 +1,18 @@
+@media (max-width: 500px) {
+  .drag-portfolio {
+    width: 95vw !important; 
+  }
+  .portfolio-window {
+    .window-content {
+      flex-direction: column;
+      max-height: fit-content !important;
+      align-items: center;
+     
+    }
+  }
+}
+
+
 .drag-portfolio {
   width: 650px; 
 }
