--- a/src/components/desktop-icons/desktopicons.css
+++ b/src/components/desktop-icons/desktopicons.css
@@ -6,15 +6,9 @@
     padding: 1.5rem;
     justify-items: center;
     width: 90px;
+    gap: 2rem;
 }
-.icon-resume {
-    grid-column: 1;
-    grid-row: 1; 
-}
-.icon-portfolio {
-    grid-column: 1;
-    grid-row: 2; 
-}
+
 .desktop-icons .icon {
     display: flex;
     height: 90px;
@@ -24,6 +18,7 @@
     width: max-content;
     gap: 5px;
     cursor: pointer;
+    z-index: 90;
 }
 
 .desktop-icons  .icon p {
