--- a/src/components/portfolio/portfoliowindow.scss
+++ b/src/components/portfolio/portfoliowindow.scss
@@ -13,7 +13,11 @@
 
 
 .portfolio-window{
+  legend {
+    user-select: none;
+  }
     .window-title {
+      user-select: none;
       display: flex;
       align-items: center;
       justify-content: space-between;
