blue screen of love

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,15 @@
+@font-face {
+  font-family: 'W95FA';
+  src: url('../public/w95fa.woff') format('truetype'); /* Update the path */
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
+  
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'W95FA',sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue' !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
