--- a/src/components/desktop-icons/desktopicons.css
+++ b/src/components/desktop-icons/desktopicons.css
@@ -11,12 +11,10 @@
 
 .desktop-icons .icon {
     display: flex;
-    height: 90px;
     width: 90px;
     flex-direction: column;
     align-items: center;
     width: max-content;
-    gap: 5px;
     cursor: pointer;
 }
 
@@ -29,12 +27,20 @@
     z-index: 1;
     user-select: none;
 }
+.elementRef {
+    position: absolute;
+    background-color: transparent;
+    opacity: 0.5;
+    height: 100%;
+    width: 100%;
+}
 .icon-placeholder {
     position: relative;
     display: flex;
     justify-content: center;
 }
 .text-placeholder {
+    margin-top: 5px;
     position: relative;
     display: flex;
 }
