--- a/src/components/desktop-icons/desktopicons.css
+++ b/src/components/desktop-icons/desktopicons.css
@@ -32,8 +32,8 @@
     position: absolute;
     background-color: transparent;
     opacity: 0.5;
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
 }
 .icon-placeholder {
     position: relative;
