can now recycle icons into the recycle bin folder directly

--- a/src/components/desktop-icons/desktopicons.css
+++ b/src/components/desktop-icons/desktopicons.css
@@ -28,7 +28,7 @@
     z-index: 1;
     user-select: none;
 }
-.elementRef {
+.desktopRef {
     position: absolute;
     background-color: transparent;
     opacity: 0.5;
