--- a/src/components/welcome/welcomewindow.scss
+++ b/src/components/welcome/welcomewindow.scss
@@ -79,6 +79,19 @@
         flex-direction: column;
         gap: 0.75rem;
     }
+
+    .helper {
+      position: absolute;
+      top: -1.5rem;
+      right: 1.5rem;
+      z-index: 99;
+      background-color: lightyellow;
+      padding: 1.5rem;
+      display: none;
+      p {
+        color: red;
+      }
+    }
     
 }
 
