--- a/src/components/welcome/welcomewindow.scss
+++ b/src/components/welcome/welcomewindow.scss
@@ -85,9 +85,16 @@
       top: -1.5rem;
       right: 1.5rem;
       z-index: 99;
-      background-color: lightyellow;
+      background-color: lightgoldenrodyellow;
       padding: 1.5rem;
       display: none;
+      border-style: solid;
+    border-width: 0.5px;
+    border-left-color: lightgray;
+    border-top-color: #dfdfdf;
+    border-right-color: #0a0a0a;
+    border-bottom-color: #0a0a0a;
+      box-shadow: 4px 4px 10px 0 rgba(0, 0, 0, 0.35), inset 1px 1px 0px 1px #fefefe, inset -1px -1px 0 1px rgb(146, 146, 100);
       p {
         color: red;
       }
