add close button to helper

--- a/src/components/welcome/welcomewindow.scss
+++ b/src/components/welcome/welcomewindow.scss
@@ -81,6 +81,7 @@
     }
 
     .helper {
+      color: red;
       position: absolute;
       top: -1.5rem;
       right: 1.5rem;
@@ -89,14 +90,17 @@
       padding: 1.5rem;
       display: none;
       border-style: solid;
-    border-width: 0.5px;
-    border-left-color: lightgray;
-    border-top-color: #dfdfdf;
-    border-right-color: #0a0a0a;
-    border-bottom-color: #0a0a0a;
+      border-width: 0.5px;
+      border-left-color: lightgray;
+      border-top-color: #dfdfdf;
+      border-right-color: #0a0a0a;
+      border-bottom-color: #0a0a0a;
       box-shadow: 4px 4px 10px 0 rgba(0, 0, 0, 0.35), inset 1px 1px 0px 1px #fefefe, inset -1px -1px 0 1px rgb(146, 146, 100);
-      p {
-        color: red;
+      .closeBtn {
+        position: absolute;
+        top: 0;
+        right: 0.1rem;
+        cursor: pointer;
       }
     }
     
