--- a/src/components/welcome/welcomewindow.scss
+++ b/src/components/welcome/welcomewindow.scss
@@ -107,19 +107,22 @@
 }
 
 @media (max-width: 600px) {
-    .drag-welcome{
-        width: 95vw;
-        .window-content {
-            flex-direction: column;
-        }
-        .login-buttons {
-           display: flex;
-           flex-direction: row;
-           width:max-content;
-           margin-left: auto;
-           margin-top: 1rem;
-        }
-    }   
+  .drag-welcome{
+    width: 95vw;
+    .window-content {
+        flex-direction: column;
+    }
+    .login-buttons {
+        display: flex;
+        flex-direction: row;
+        width:max-content;
+        margin-left: auto;
+        margin-top: 1rem;
+    }
+    .helper {
+      right: 0.5rem;
+    }
+  }   
 }
 
 
