--- a/src/components/browser/browserwindow.scss
+++ b/src/components/browser/browserwindow.scss
@@ -12,17 +12,17 @@
 }
 
 .browser-window{
-    height: max-content;
-    html {
-        overflow: hidden;
-    }
-    .window-title {
-        user-select: none;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    .close-icon {
+  height: max-content;
+  html {
+    overflow: hidden;
+  }
+  .window-title {
+    user-select: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .close-icon {
     display: inline-block;
     width: 16px;
     height: 16px;
@@ -32,45 +32,52 @@
     position: relative;
     &:before,
     &:after {
-        content: '';
-        position: absolute;
+      content: '';
+      position: absolute;
     }
     &:before {
-        height: 100%;
-        width: 3px;
-        left: 50%;
-        transform: translateX(-50%);
+      height: 100%;
+      width: 3px;
+      left: 50%;
+      transform: translateX(-50%);
     }
     &:after {
-        height: 3px;
-        width: 100%;
-        left: 0px;
-        top: 50%;
-        transform: translateY(-50%);
+      height: 3px;
+      width: 100%;
+      left: 0px;
+      top: 50%;
+      transform: translateY(-50%);
     }
-    }
-    .window {
+  }
+  .window {
     display: flex;
-    }
-    .window-content {
+  }
+  .window-content {
     display: flex;
     width: 600px;
     height: 500px;
     gap: 15px;
-    }
-    .footer {
+  }
+  .footer {
     display: block;
     margin: 0.25rem;
     height: 31px;
     line-height: 31px;
     padding-left: 0.25rem;
+  }
+  .browser-screen {
+    position: absolute;
+    background-color: transparent;
+    width:  calc(100% - 40px);
+    height: calc(100% -  75px);
+  }
+  .iframe-text {
+    font-size: x-small;
+    a {
+      color: blue;
+      text-decoration: underline;
     }
-    .browser-screen {
-        position: absolute;
-        background-color: transparent;
-        width:  calc(100% - 40px);
-        height: calc(100% -  75px);
-    }
+  }
 }
 
 
