--- a/src/components/browser/browserwindow.scss
+++ b/src/components/browser/browserwindow.scss
@@ -1,7 +1,7 @@
 @media (max-width: 500px) {
     .drag-browser{
     .window-content {
-        width: 82.5vw !important;
+        width: 97.5% !important;
     }
   }
 }
@@ -22,6 +22,7 @@
 }
 
 .browser-window {
+  text-align: -webkit-center;
   height: 450px;
   html {
     overflow: hidden;
@@ -85,6 +86,7 @@
     height: 380px;
   }
   .iframe-text {
+    margin-top: 2.5px;
     font-size: x-small;
     a {
       color: blue;
