--- a/src/components/browser/browserwindow.scss
+++ b/src/components/browser/browserwindow.scss
@@ -83,7 +83,7 @@
   }
   .browser-screen {
     position: absolute;
-    background-color: red;
+    background-color: transparent;
     width:  calc(100% - 20px);
     height: calc(100% -  50px);
   }
