--- a/src/components/bluescreen/bluescreen.css
+++ b/src/components/bluescreen/bluescreen.css
@@ -12,6 +12,7 @@
     font-family: 'W95FA', sans-serif;
     font-weight: bold;
     position: absolute;
+    top: 0;
     height: 100vh;
     width: 100vw;
     z-index: 999;
