--- a/src/components/desktop-icons/desktopicons.css
+++ b/src/components/desktop-icons/desktopicons.css
@@ -1,12 +1,8 @@
 .desktop-icons {
-    grid-area: 1 / 1 / 21 / 14;
-    display: grid;
-    grid-template-columns: 90px;
-    grid-template-rows: 1fr 1fr;
+    display: inherit;
     padding: 1.5rem;
     justify-items: center;
     width: 90px;
-    gap: 2rem;
 }
 
 .desktop-icons .icon {
