recycle audio and better code

--- a/src/components/warning/warningwindow.scss
+++ b/src/components/warning/warningwindow.scss
@@ -2,7 +2,7 @@
   .drag-warning {
   }
 }
-.warning-window{
+.warning-window, .bin-warning-window, .recycle-warning-window {
   .window-title {
         user-select: none;
         display: flex;
