--- a/src/components/recyclebin/recyclebinwindow.scss
+++ b/src/components/recyclebin/recyclebinwindow.scss
@@ -20,7 +20,7 @@
       width: max-content;
       text-align: -webkit-center;
       cursor: pointer;
-
+      
       p {
         text-align: center;
         cursor: pointer;
@@ -92,6 +92,14 @@
           height: 35px;
           align-self: center;
         }
+        .icon-whole {
+          position: absolute;
+          top: 0;
+          z-index: 20;
+          height: 100%;
+          width: 100%;
+          background-color: transparent;
+        }
       }
       .footer {
         width: 99%;
@@ -125,6 +133,15 @@
       width: max-content;
       text-align: -webkit-center;
       cursor: pointer;
+
+      .icon-whole {
+        position: absolute;
+        top: 0;
+        z-index: 20;
+        height: 100%;
+        width: 100%;
+        background-color: transparent;
+      }
 
       p {
         text-align: center;
