refactor portfolio tree

--- a/src/components/browser/browserwindow.scss
+++ b/src/components/browser/browserwindow.scss
@@ -93,6 +93,7 @@
   .iframe-text {
     margin-top: 2.5px;
     font-size: x-small;
+    user-select: none;
     a {
       color: blue;
       text-decoration: underline;
