--- a/src/components/music/musicwindow.scss
+++ b/src/components/music/musicwindow.scss
@@ -74,7 +74,8 @@
       }
       .music-title {
         overflow: hidden;
-        max-width: 200px;
+        padding-left: 5px;
+        max-width: 160px;
         white-space: nowrap;
         color: greenyellow;
         background-color: black;
