--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -6,41 +6,15 @@
   padding: 0 10px !important;
   margin-right: 5px;
 }
+.close-icon {
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
 .minimise-icon {
     display: inline-block;
-    border-bottom: 4px solid black; /* Adjust the thickness as needed */
-    padding: 0 4px; /* Adjust the padding to control the length */
+    border-bottom: 4px solid black;
+    padding: 0 4px;
     margin-bottom: 9px;
-}
-.close-icon {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  margin-left: -1px;
-  margin-top: -1px;
-  transform: rotateZ(45deg);
-  position: relative;
-  &:before,
-  &:after {
-    content: '';
-    position: absolute;
-  }
-  &:before {
-    height: 100%;
-    width: 3px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  &:after {
-    height: 3px;
-    width: 100%;
-    left: 0px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-}
-.help-icon {
-  font-weight: bold;
-  font-size: larger;
-  width: 31px;
 }
