--- a/src/components/desktop-icons/desktopicons.css
+++ b/src/components/desktop-icons/desktopicons.css
@@ -15,6 +15,10 @@
     cursor: pointer;
 }
 
+.icon {
+    pointer-events: none;
+}
+
 .desktop-icons  .icon p {
     font-weight: bold;
     color: #fefefe;;
@@ -33,6 +37,7 @@
     position: relative;
     display: flex;
     justify-content: center;
+    pointer-events: auto;
 }
 .text-placeholder {
     margin-top: 5px;
@@ -40,6 +45,7 @@
     display: flex;
     justify-content: center;
     width: max-content;
+    pointer-events: auto;
 }
 .filter, .filter-gray, .filter-blue, .bin-filter, .bin-filter-black {
     position: absolute;
