--- a/src/components/recyclebin/recyclebinwindow.scss
+++ b/src/components/recyclebin/recyclebinwindow.scss
@@ -110,6 +110,7 @@
       cursor: pointer;
 
       .icon-whole {
+        pointer-events: auto;
         position: absolute;
         top: 0;
         z-index: 20;
